Closed Bug 1668933 Opened 4 years ago Closed 4 years ago

Getting previous text marker from marker in 0 offset on an entry fails

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: eeejay, Assigned: eeejay)

Details

(Whiteboard: [mac2020_2])

Attachments

(1 file)

Layout's peek offset seems to not cross the entry text's frame boundary when searching for a previous offset.

Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7eb87e664505
Fix get previous marker outside of entry. r=morgan
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: