Bug 1668933 - Fix get previous marker outside of entry. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D92308